--- a/src/Petabridge.Monitoring.PCF/Petabridge.Monitoring.PCF.csproj
+++ b/src/Petabridge.Monitoring.PCF/Petabridge.Monitoring.PCF.csproj
@@ -4,6 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Description>High performance .NET driver for working with Pivotal Cloud Foundry (PCF) Metrics.</Description>
   </PropertyGroup>
 
 </Project>
