--- a/src/Petabridge.Monitoring.PCF/Petabridge.Monitoring.PCF.csproj
+++ b/src/Petabridge.Monitoring.PCF/Petabridge.Monitoring.PCF.csproj
@@ -9,8 +9,14 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Akka.Bootstrap.PCF" Version="0.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Phobos.Actor.Common" Version="1.0.0" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <Folder Include="Reporting\" />
   </ItemGroup>
 
 </Project>
