--- a/src/Petabridge.Monitoring.PCF.Demo/Petabridge.Monitoring.PCF.Demo.csproj
+++ b/src/Petabridge.Monitoring.PCF.Demo/Petabridge.Monitoring.PCF.Demo.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Petabridge.Cmd.Host" Version="0.3.3" />
   </ItemGroup>
 
   <ItemGroup>
